# dcorm

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/dcorm/: __init__.py  connection_pool.py  converters.py  dcorm.py  queries.py  types.py  weak_refs.py
src/dcorm/experimental/: query.py
tests/dcorm/: test_connection_pool.py  test_create.py  test_dcorm.py  test_dcorm_forward_reference.py  test_queries.py  test_relation_queries.py
tests/weak_refs/: test_weak_refs.py
