[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "Sandbox for personal projects"
authors = ["Mark Wicks <mawicks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
