[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "Sandbox for personal projects"
authors = ["Mark Wicks <mawicks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.8.1"
cattrs = "^22.2.0"
dash-bootstrap-components = "^1.4.0"
pandas = "^2.0.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
mypy = "^1.0.0"
ipykernel = "^6.21.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
