[tool.poetry]
name = "dcorm"
version = "0.1.0"
description = "Sandbox for personal projects"
authors = ["Mark Wicks <mawicks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cattrs = "^22.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
mypy = "^1.0.0"
ipykernel = "^6.21.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
